--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,6 +4,8 @@
   ],
   "rules": {
     // your rules
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/restrict-template-expressions": "off",
+    "no-empty-function": "off"
   }
 }
