--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "bun-types": "latest",
     "tsx": "^4.6.2",
-    "typescript": "^5.3.3"
-  }
+    "typescript": "^5.3.3",
+    "@types/node": "^20.10.6"
+  },
+  "dependencies": {}
 }
