--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
     // your rules
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/restrict-template-expressions": "off",
-    "no-empty-function": "off"
+    "no-empty-function": "off",
+    "@typescript-eslint/no-use-before-define": "off"
   }
 }
