--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,9 +4,11 @@
   ],
   "rules": {
     // your rules
+    "no-unused-vars": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "@typescript-eslint/restrict-template-expressions": "off",
     "no-empty-function": "off",
+    "no-use-before-define": "off",
     "@typescript-eslint/no-use-before-define": "off"
   }
 }
