--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "author": "Theodros Yimer",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^20.10.6",
     "bun-types": "latest",
     "tsx": "^4.6.2",
-    "typescript": "^5.3.3",
-    "@types/node": "^20.10.6"
+    "typescript": "^5.3.3"
   },
-  "dependencies": {}
+  "dependencies": {
+    "zod": "^3.22.4"
+  }
 }
